--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/João Gouveia/Documents/messageria/lib/javax.jms.jar"/>
-	<classpathentry kind="lib" path="C:/Users/João Gouveia/Documents/messageria/lib/jms.jar"/>
+	<classpathentry kind="lib" path="J:/FUMEC/DSD/aai/apache-activemq-5.15.2/activemq-all-5.15.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
