--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="J:/FUMEC/DSD/aai/apache-activemq-5.15.2/activemq-all-5.15.2.jar"/>
+	<classpathentry kind="src" path="config"/>
+	<classpathentry kind="lib" path="J:/FUMEC/DSD/aai/apache-activemq-5.11.1/activemq-all-5.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
